data/documentations/numpy/numpy/typing/tests/data/fail/flatiter_pyi.comment
['text':' E: Property "base" defined in "flatiter" is read-only','line_number':15,'multiline':False]
['text':' E: Property "coords" defined in "flatiter" is read-only','line_number':16,'multiline':False]
['text':' E: Property "index" defined in "flatiter" is read-only','line_number':17,'multiline':False]
['text':' E: Unexpected keyword argument','line_number':18,'multiline':False]
['text':' NOTE: Contrary to `ndarray.__getitem__` its counterpart in `flatiter`','line_number':20,'multiline':False]
['text':' does not accept objects with the `__array__` or `__index__` protocols;','line_number':21,'multiline':False]
['text':' boolean indexing is just plain broken (gh-17175)','line_number':22,'multiline':False]
['text':' E: No overload variant of "__getitem__"','line_number':23,'multiline':False]
['text':' E: No overload variant of "__getitem__"','line_number':24,'multiline':False]
['text':' E: No overload variant of "__getitem__"','line_number':25,'multiline':False]
